# leptos-cloudflare

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo-generate.toml
.devcontainer/: Dockerfile  devcontainer.json
app/: Cargo.toml
app/src/: lib.rs
app/src/components/: counter.rs  mod.rs
client/: Cargo.toml
client/src/: lib.rs
cloudflare/: .env  Cargo.toml  wrangler.toml
cloudflare/src/: file_details.rs  lib.rs
