[package]
name = "client"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app = { path = "../app", default-features = false, features = [ "hydrate" ] }
console_error_panic_hook = "0.1"
console_log = "0.2"
leptos = { git = "https://github.com/gbj/leptos", features = [ "hydrate" ] }
log = "0.4"

# hydrate is defaulted into leptos already but this allows the
# feature to be set for this lib directly if desired
[features]
hydrate = []