[package]
name = "client"
description = "Example client app"
repository = "https://github.com/perry-birch/leptos-cloudflare"
license = "MIT"
authors = ["Perry Birch <perrysd@gmail.com>"]
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Local deps
app = { workspace = true, default-features = false, features = [ "hydrate" ] }

# Leptos latest
leptos = { workspace = true, features = [ "hydrate" ] }

# Crates.io
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
wasm-bindgen = "0.2.84"
web-sys = "0.3.61"

# hydrate is defaulted into leptos already but this allows the
# feature to be set for this lib directly if desired
[features]
hydrate = []